# manuscript

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindAnyProject.cmake  FindExtNGSTD.cmake  manuscript.desktop.in  util.cmake
src/: CMakeLists.txt  application.cpp  application.h  bottomwidget.cpp  bottomwidget.h  centralwidget.cpp  centralwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  navigationwidget.cpp  navigationwidget.h  panes.cpp  panes.h  project.cpp  project.h  tooltip.cpp  tooltip.h  utils.h  version.h  welcomewidget.cpp  welcomewidget.h
src/dialogs/: addarticledlg.cpp  addarticledlg.h  addarticledlg.ui  firstlaunchdlg.cpp  firstlaunchdlg.h  firstlaunchdlg.ui  preferences.cpp  preferences.h  preferences.ui
src/editor/: editorwidget.cpp  editorwidget.h  highlightscrollbarcontroller.cpp  highlightscrollbarcontroller.h  rsthighlighter.cpp  rsthighlighter.h  texteditorwidget.cpp  texteditorwidget.h
src/git/: brancheswizardpage.cpp  brancheswizardpage.h  brancheswizardpage.ui  finishwizardpage.cpp  finishwizardpage.h  finishwizardpage.ui  importfromgitwizard.cpp  importfromgitwizard.h  repopathwizardpage.cpp  repopathwizardpage.h  repopathwizardpage.ui  submoduleswizardpage.cpp  submoduleswizardpage.h  submoduleswizardpage.ui
src/logs/: ansiescapecodehandler.cpp  ansiescapecodehandler.h  outputwidget.cpp  outputwidget.h
src/qtc/: documentmanager.cpp
src/res/: interface.json  manuscript.qrc  manuscript.rc
src/res/highlighter/: dark.theme  light.theme
translations/: CMakeLists.txt  manuscript_en.ts  manuscript_ru.ts
